Fixed layout issue on tag index  slider

--- a/app/assets/stylesheets/components/_slider.scss
+++ b/app/assets/stylesheets/components/_slider.scss
@@ -33,8 +33,16 @@
     opacity: 1;
   }
 }
+
+.sliding-pane-wrap {
+  height: 100vh !important;
+  position: absolute;
+  top: 0 !important;
+  left: 0 !important;
+}
+
 .sliding-pane {
-  height: 100vh;
+  height: 100vh !important;
   width: 460px;
   border: 3px solid #f2f2f2;
   position: absolute !important;
@@ -99,5 +107,5 @@
 
 .nb-index-container,
 .tag-index-container {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
